
   * Support pushing multiple revisions in a row. (#115494)

   * Fix compatibility with Subversion 1.5. (#73918)

   * Fix import of svk:merge properties (need to be sorted lexicographically).

   * Support possible_transports argument to BzrDir.sprout(). (#128500)

   * Fix incorrect delete when a child of a renamed directory is removed.

  BEHAVIOUR CHANGES

   * Use shared repositories by default in svn-import command.

   * Avoid muttering when possible.

  TESTS

   * Add blackbox test for svn-import with dumpfile. (#123493)

  PERFORMANCE

   * do_update() is now used to find the contents of a directory recursively. 
     This should reduce the number of roundtrips significantly when 
	 finding file id mappings.

   * Support read locking for Branch.

  FEATURES
   
   * add -v option to svn-upgrade

   * store and allow setting the branching scheme in subversion.conf

   * allow setting the branching scheme from a file property 
     on the repository root

   * Support true push (#80612).

   * Support commits in heavy checkouts (#79330).

   * Support using custom branching schemes.

   * Support pushing new branches.

   * Add --prefix option to svn-import. (#125993)

   * Add 'bzr help svn-branching-schemes'

   * Branching schemes can now be autodetected using some simple heuristics. 
     (#81976)

   * Added command `svn-branching-scheme` for setting branching schemes.
     (#127003)

  INTERNALS

   * Implement SvnRaTransport.local_abspath(). (#117090)

   * Implement SvnRemoteAccess.create_branch().

   * Implement SvnWorkingTree.smart_add() (#79336)

bzr-svn 0.3.4	2007-06-15

  BUG FIXES

  * Check for a working pysqlite, rather than checking that the 
    first one found works. (#115026)

  * Fix compatibility with Bazaar 0.17.

bzr-svn 0.3.3	2007-04-29

  IMPROVEMENTS

  * Fix compatibility with Bazaar 0.16 (#110164)

  * Don't do extra checkout before push if possible. (#91885)

  * Set parent URLs in svn-import. (#94406)
